Fix MDN_Form_validation example

--- a/examples/MDN_Form_validation/style.css
+++ b/examples/MDN_Form_validation/style.css
@@ -41,3 +41,9 @@ input:invalid {
 input:focus:invalid {
   outline: none;
 }
+
+/* FieldFeedbacks */
+div.error {
+  margin-top: 5px;
+  color: red;
+}
