Full rewrite to allow for elements between FieldFeedbacks and FieldFeedback
No more use of React.Children and React.cloneElement()
+ tons of other things

--- a/examples/Password/style.css
+++ b/examples/Password/style.css
@@ -11,12 +11,12 @@ form > div > label {
 }
 
 /* FieldFeedbacks */
-form > div > div > div.error {
+div.error {
   color: red;
 }
-form > div > div > div.warning {
+div.warning {
   color: orange;
 }
-form > div > div > div.info {
+div.info {
   color: blue;
 }
