Use [data-feedback] instead of div

--- a/examples/ClubMembers/style.css
+++ b/examples/ClubMembers/style.css
@@ -9,25 +9,24 @@ ul.list-none {
 }
 
 /*
- * FieldFeedbacks
  * See https://github.com/twbs/bootstrap/blob/v4.0.0/scss/mixins/_forms.scss#L30
  */
-div.error {
+[data-feedback].error {
   margin-top: .25rem; /* $form-feedback-margin-top */
   font-size: 80%; /* $form-feedback-font-size */
   color: #dc3545; /* $form-feedback-invalid-color */
 }
-div.warning {
+[data-feedback].warning {
   margin-top: .25rem;
   font-size: 80%;
   color: #ffc107; /* $warning */
 }
-div.info {
+[data-feedback].info {
   margin-top: .25rem;
   font-size: 80%;
   color: #17a2b8; /* $info */
 }
-div.valid {
+[data-feedback].valid {
   margin-top: .25rem;
   font-size: 80%;
   color: #28a745; /* $form-feedback-valid-color */
