--- a/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
+++ b/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
@@ -1,10 +1,11 @@
 // Bootstrap 4 likes to hide feedbacks, we don't like it, especially react-form-with-constraints-tools's DisplayFields
+// See .invalid-feedback doesn't show for .input-group with an invalid control https://github.com/twbs/bootstrap/issues/23454
 .valid-feedback, .invalid-feedback {
   display: block !important; // See Is there an opposite to display:none? https://stackoverflow.com/a/37289654/990356
 }
 
 // See v4-beta form-validation-state() mixin does not work https://github.com/twbs/bootstrap/issues/23371
-// Taken and adapted from https://github.com/twbs/bootstrap/blob/v4.0.0/scss/mixins/_forms.scss#L29
+// Taken and adapted from https://github.com/twbs/bootstrap/blob/v4.1.2/scss/mixins/_forms.scss#L29
 // Commented lines: 'display: none' + '.was-validated &:#{$state}'
 @mixin form-validation-state2($state, $color) {
   .#{$state}-feedback {
@@ -25,7 +26,7 @@
     margin-top: .1rem;
     font-size: .875rem;
     line-height: 1;
-    color: #fff;
+    color: $white;
     background-color: rgba($color, .8);
     border-radius: .2rem;
   }
@@ -41,6 +42,16 @@
         box-shadow: 0 0 0 $input-focus-width rgba($color, .25);
       }
 
+      ~ .#{$state}-feedback,
+      ~ .#{$state}-tooltip {
+        display: block;
+      }
+    }
+  }
+
+  .form-control-file {
+    //.was-validated &:#{$state},
+    &.is-#{$state} {
       ~ .#{$state}-feedback,
       ~ .#{$state}-tooltip {
         display: block;
@@ -116,13 +127,13 @@
   }
 }
 
-// See https://github.com/twbs/bootstrap/blob/v4.0.0/scss/_variables.scss#L521
+// See https://github.com/twbs/bootstrap/blob/v4.1.2/scss/_variables.scss#L571
 // $form-feedback-valid-color => $success => $green => #28a745
 // $form-feedback-invalid-color => $danger => $red => #dc3545
 $form-feedback-warning-color: theme-color("warning") !default; // $yellow => #ffc107
 $form-feedback-info-color: theme-color("info") !default; // $cyan => #17a2b8
 
-// See https://github.com/twbs/bootstrap/blob/v4.0.0/scss/_forms.scss#L244
+// See https://github.com/twbs/bootstrap/blob/v4.1.2/scss/_forms.scss#L245
 // @include form-validation-state("valid", $form-feedback-valid-color);
 // @include form-validation-state("invalid", $form-feedback-invalid-color);
 @include form-validation-state2("warning", $form-feedback-warning-color);
