--- a/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
+++ b/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
@@ -4,8 +4,10 @@
   display: block !important; // See Is there an opposite to display:none? https://stackoverflow.com/a/37289654/990356
 }
 
-// See v4-beta form-validation-state() mixin does not work https://github.com/twbs/bootstrap/issues/23371
-// Taken and adapted from https://github.com/twbs/bootstrap/blob/v4.1.2/scss/mixins/_forms.scss#L29
+// See [v4-beta form-validation-state() mixin does not work](https://github.com/twbs/bootstrap/issues/23371)
+// See [Fix form-validation-state() for unknown pseudo classes](https://github.com/twbs/bootstrap/pull/27409)
+// See [ability to generate warning form state](https://github.com/twbs/bootstrap/pull/26471)
+// Taken and adapted from https://github.com/twbs/bootstrap/blob/v4.1.3/scss/mixins/_forms.scss#L29
 // Commented lines: 'display: none' + '.was-validated &:#{$state}'
 @mixin form-validation-state2($state, $color) {
   .#{$state}-feedback {
@@ -22,13 +24,13 @@
     z-index: 5;
     display: none;
     max-width: 100%; // Contain to parent when possible
-    padding: .5rem;
+    padding: $tooltip-padding-y $tooltip-padding-x;
     margin-top: .1rem;
-    font-size: .875rem;
-    line-height: 1;
-    color: $white;
-    background-color: rgba($color, .8);
-    border-radius: .2rem;
+    font-size: $tooltip-font-size;
+    line-height: $line-height-base;
+    color: color-yiq($color);
+    background-color: rgba($color, $tooltip-opacity);
+    @include border-radius($tooltip-border-radius);
   }
 
   .form-control,
@@ -110,7 +112,7 @@
       ~ .custom-file-label {
         border-color: $color;
 
-        &::before { border-color: inherit; }
+        &::after { border-color: inherit; }
       }
 
       ~ .#{$state}-feedback,
@@ -127,14 +129,16 @@
   }
 }
 
-// See https://github.com/twbs/bootstrap/blob/v4.1.2/scss/_variables.scss#L571
+// See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L572
 // $form-feedback-valid-color => $success => $green => #28a745
 // $form-feedback-invalid-color => $danger => $red => #dc3545
 $form-feedback-warning-color: theme-color("warning") !default; // $yellow => #ffc107
 $form-feedback-info-color: theme-color("info") !default; // $cyan => #17a2b8
 
-// See https://github.com/twbs/bootstrap/blob/v4.1.2/scss/_forms.scss#L245
+// See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_forms.scss#L243
+// The order matters: invalid should be the last to override the other CSS rules
 // @include form-validation-state("valid", $form-feedback-valid-color);
 // @include form-validation-state("invalid", $form-feedback-invalid-color);
-@include form-validation-state2("warning", $form-feedback-warning-color);
 @include form-validation-state2("info", $form-feedback-info-color);
+@include form-validation-state2("warning", $form-feedback-warning-color);
+@include form-validation-state2("invalid", $form-feedback-invalid-color);
