Disable Bootstrap >= 4.2.1 input validation icons

--- a/examples/Bootstrap4/App.scss
+++ b/examples/Bootstrap4/App.scss
@@ -1,3 +1,5 @@
+$enable-validation-icons: false;
+
 @import "~bootstrap/scss/bootstrap";
 @import "~react-form-with-constraints-bootstrap4/scss/bootstrap";
 
