--- a/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
+++ b/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
@@ -1,8 +1,8 @@
 // Bootstrap 4 likes to hide feedbacks, we don't like it, especially react-form-with-constraints-tools's DisplayFields
-// See .invalid-feedback doesn't show for .input-group with an invalid control https://github.com/twbs/bootstrap/issues/23454
+// See [.invalid-feedback doesn't show for .input-group with an invalid control](https://github.com/twbs/bootstrap/issues/23454)
 .valid-feedback,
 .invalid-feedback {
-  display: block !important; // See Is there an opposite to display:none? https://stackoverflow.com/a/37289654/990356
+  display: block !important; // See [Is there an opposite to display:none?](https://stackoverflow.com/a/37289654/990356)
 }
 
 // See [v4-beta form-validation-state() mixin does not work](https://github.com/twbs/bootstrap/issues/23371)
