Upgrade Bootstrap4 example spinner

--- a/examples/Bootstrap4/App.scss
+++ b/examples/Bootstrap4/App.scss
@@ -1,84 +1,4 @@
-$enable-validation-icons: false;
-
 @import '~bootstrap/scss/bootstrap';
 @import '~react-form-with-constraints-bootstrap4/scss/bootstrap';
 
-// CSS spinner taken from https://stephanwagner.me/only-css-loading-spinner
-//
-// Another solution could be a SVG background-image like in Bootstrap v4.0.0-alpha.6:
-// - https://v4-alpha.getbootstrap.com/components/forms/#examples
-// - https://github.com/twbs/bootstrap/blob/v4.0.0-alpha.6/scss/_forms.scss
-//
-// Note: [Can I use a :before or :after pseudo-element on an input field?](https://stackoverflow.com/q/2587669)
-
-@keyframes spinner {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-$spinner-size: 20px;
-
-%spinner {
-  position: absolute;
-
-  width: $spinner-size;
-  height: $spinner-size;
-
-  // See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_forms.scss#L17
-  border: $input-border-width solid $input-border-color;
-
-  border-radius: 50%;
-  border-top-color: $black;
-  animation: spinner 0.6s linear infinite;
-}
-
-input.is-pending {
-  padding-right: calc(#{$spinner-size} - #{$input-border-width} * 2 + #{$input-padding-x});
-
-  + .input-state {
-    float: right;
-    margin-right: calc(#{$spinner-size} + #{$input-padding-x} / 2);
-    margin-top: calc((#{$input-height} + #{$spinner-size}) / -2);
-
-    &::before {
-      // Cannot use "content: '\a0\a0\a0\a0'" and remove spinner's width, height, "position: absolute" attributes
-      // otherwise we cannot be sure the spinner is a perfect circle
-      content: '';
-      @extend %spinner;
-    }
-  }
-}
-
-$text-height: $font-size-base * $line-height-base;
-$text-width: 1ch;
-
-input.is-valid {
-  padding-right: calc(#{$text-width} + #{$input-padding-x});
-
-  + .input-state {
-    float: right;
-    margin-right: $input-padding-x / 2;
-    margin-top: calc((#{$input-height} + #{$text-height}) / -2);
-
-    &::before {
-      content: '✓';
-      color: $success;
-    }
-  }
-}
-
-input.is-invalid {
-  padding-right: calc(#{$text-width} + #{$input-padding-x});
-
-  + .input-state {
-    float: right;
-    margin-right: $input-padding-x / 2;
-    margin-top: calc((#{$input-height} + #{$text-height}) / -2);
-
-    &::before {
-      content: '✕';
-      color: $danger;
-    }
-  }
-}
+@import './bootstrap-spinner';
