--- a/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
+++ b/packages/react-form-with-constraints-bootstrap4/scss/bootstrap.scss
@@ -1,15 +1,15 @@
 // Bootstrap 4 likes to hide feedbacks, we don't like it, especially react-form-with-constraints-tools's DisplayFields
-// See [.invalid-feedback doesn't show for .input-group with an invalid control](https://github.com/twbs/bootstrap/issues/23454)
+// [.invalid-feedback doesn't show for .input-group with an invalid control](https://github.com/twbs/bootstrap/issues/23454)
 .valid-feedback,
 .invalid-feedback {
-  display: block !important; // See [Is there an opposite to display:none?](https://stackoverflow.com/a/37289654/990356)
+  display: block !important; // [Is there an opposite to display:none?](https://stackoverflow.com/a/37289654/990356)
 }
 
 // stylelint-disable max-nesting-depth
 
-// See [v4-beta form-validation-state() mixin does not work](https://github.com/twbs/bootstrap/issues/23371)
-// See [Fix form-validation-state() for unknown pseudo classes](https://github.com/twbs/bootstrap/pull/27409)
-// See [ability to generate warning form state](https://github.com/twbs/bootstrap/pull/26471)
+// [v4-beta form-validation-state() mixin does not work](https://github.com/twbs/bootstrap/issues/23371)
+// [Fix form-validation-state() for unknown pseudo classes](https://github.com/twbs/bootstrap/pull/27409)
+// [ability to generate warning form state](https://github.com/twbs/bootstrap/pull/26471)
 // Taken and adapted from https://github.com/twbs/bootstrap/blob/v4.1.3/scss/mixins/_forms.scss#L29
 // Commented lines: 'display: none' + '.was-validated &:#{$state}'
 @mixin form-validation-state2($state, $color) {
@@ -134,13 +134,13 @@
   }
 }
 
-// See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L572
+// https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L572
 // $form-feedback-valid-color => $success => $green => #28a745
 // $form-feedback-invalid-color => $danger => $red => #dc3545
 $form-feedback-warning-color: theme-color('warning') !default; // $yellow => #ffc107
 $form-feedback-info-color: theme-color('info') !default; // $cyan => #17a2b8
 
-// See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_forms.scss#L243
+// https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_forms.scss#L243
 // The order matters: invalid should be the last to override the other CSS rules
 // @include form-validation-state("valid", $form-feedback-valid-color);
 // @include form-validation-state("invalid", $form-feedback-invalid-color);
