Copy-paste root tsconfig.json because of StackBlitz
- Switch from CodeSandbox to StackBlitz
- Various small fixes

--- a/examples/HTML5ConstraintValidationAPI/style.css
+++ b/examples/HTML5ConstraintValidationAPI/style.css
@@ -1,6 +1,6 @@
 /*
 Copy-pasted from PlainOldReact/style.css
-Cannot use a symlink nor "import '../PlainOldReact/style.css'" because of CodeSandbox
+Cannot use a symlink nor "import '../PlainOldReact/style.css'" because of StackBlitz
 */
 
 body {
