--- a/examples/WizardForm/style.css
+++ b/examples/WizardForm/style.css
@@ -1,6 +1,6 @@
 /*
 Copy-pasted from Password/style.css
-Cannot use a symlink nor "import '../Password/style.css'" because of CodeSandbox
+Cannot use a symlink nor "import '../Password/style.css'" because of StackBlitz
 */
 
 body {
